kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lounge-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dezurich.gauthamupadhyaya.in
    secretName: tls-secret
  rules:
  - host: dezurich.gauthamupadhyaya.in
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: lounge-app-service
              port:
                number: 8000
